--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,19 +1,42 @@
 APScheduler==3.6.3
+beautifulsoup4==4.9.3
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.5
+chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
 cryptography==3.4.7
 decorator==5.0.9
+dialogflow==0.5.2
+feedparser==6.0.8
 Flask==2.0.1
 future==0.18.2
+fuzzywuzzy==0.18.0
+gnews==0.1.3
+gnewsclient==1.11
+google-api-core==1.30.0
+google-auth==1.32.0
+googleapis-common-protos==1.53.0
+grpcio==1.38.1
+idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
+MarkupSafe==2.0.1
+packaging==20.9
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
-python-telegram-bot==12.8
+pyparsing==2.4.7
+python-telegram-bot==11.1.0
 pytz==2021.1
+requests==2.25.1
+rsa==4.7.2
+sgmllib3k==1.0.0
 six==1.16.0
+soupsieve==2.2.1
 tornado==6.1
 tzlocal==2.1
+urllib3==1.26.6
 Werkzeug==2.0.1
